--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -57,7 +57,9 @@ h1.text-pretty {
 }
 
 .md-content p {
+  font-weight: 300;
   line-height: 1em;
+  font-family: "PPNM-V", serif;
 }
 
 .x-md-content .text-pretty {
